building homepage & people; photo alignment solved in page people

--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -1228,8 +1228,8 @@ input[type="radio"] + label:before {
       height: 12em; }
   .image.top {
     float: top;
-    padding: 0 0 0 0;
-    top: 0}
+    padding: 0 9em 0 0;
+    }
   .image.left {
     float: left;
     padding: 0 1.5em 1em 0;
